	and made recommended in R 2.14.0 so that the this version of vegan
	depends on R >= 2.14.0. 

	* tweaks for R < 2.12.1 removed: code to fix buggy naming of
	columns in qr.X before 2.12.1 (as.mlm.cca/rda, intersetcor), and
	change in the cmdscale() output (eigenvals.default).

	* tweak for R < 2.13.0 removed: change in cmdscale() output
	(capscale).
	
Version 2.1-33 (closed August 28, 2013)

	* DESCRIPTION: new dependence on lattice. Passes new strict R
	checks with NOTE on ':::' calls to tools:::httpdPort (to launch
	reading vegan NEWS.html in existing browser window) and
	parallel:::.reg to acces the defaultCluster in an unexported
	environment within 'parallel' Namespace.
	
Version 2.1-32 (closed August 19, 2013)

	* opened a new version with the CRAN release of vegan 2.0-8.

	* merged Eduard Szöcs's code on dispersion weighting of
	overdispersed species following Clarke, K. R., M. G. Chapman,
	P. J. Somerfield, and H. R. Needham.  2006. Dispersion-based
	Weighting of Species Counts in Assemblage Analyses. _Marine
	Ecology Progress Series_, 320, 11–27. The basic development was
	made in github.com and merged to R-Forge.

	* nullmodel: replaced internal indshuffle() function in
	make.commsim() with much faster stats::rmultinom(). The
	rmultinom() function takes argument 'n' for the number of random
	vectors, and using this could be still faster, but we only
	generate one vector in time. Using 'n' would require better
	analysis of individual nullmodels. The commit changes random
	sequences, but passes tests.

	* oecosimu: Gained argument 'batchsize' to set the maximum size of
	simulated nullmodels (in Mb). If a larger object would be
	produced, the analysis is broken into several batches to avoid
	exceeding the maximum size. This avoids exhausting memory which
	can make whole R unresponsive and analysis very, very slow. In
	general, the argument is needed with large data sets and/or large
	number of simulations.
